--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: result
 description: "A new Flutter package project."
 version: 1.0.0
+homepage: https://github.com/evandersondev/result
 
 environment:
   sdk: ^3.5.4
