update name package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: result
+name: resultify
 description: "A new Flutter package project."
 version: 1.0.0
 homepage: https://github.com/evandersondev/result
